# ifj-project

./: .clang-format  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile  README.md  check_format.sh  rozdeleni
.github/workflows/: ci.yml
grammar/: bruteforce_hash.py  build_grammar.py  build_precedence.py  clang-format-13_13.0.0-2_amd64.deb  grammar_definition.py  output_ll_table.py  parser-config.json
include/: ast.h  binary_search_tree.h  codegen.h  debug.h  deque.h  dynstring.h  error.h  hashtable_bst.h  hashtablebase.h  optimizations.h  parser-generated.h  parser-precedence-table.h  parser.h  scanner.h  search_key.h  semantics.h  stack.h  symtable.h  tokensim.h  type.h
src/: codegen.c  main.c  optimizations.c  parser-generated.c  parser-precedence.c  parser-syn.c  scanner.c  semantics.c  symtable.c  type.c
src/utils/: binary_search_tree.c  deque.c  dynstring.c  hashtablebase.c  scanner.c  search_key.c  stack.c  tokensim.c
testoid/: config  ifjtest  ifjtest.save
testoid/test_cases/Glitch 001/: program.tl
testoid/test_cases/andrei0_0/: output  program.tl
testoid/test_cases/andrei0_cg/: output  program.tl
testoid/test_cases/andrei0_new_gen_0/: output  program.tl
testoid/test_cases/andrei1_0/: program.tl
testoid/test_cases/andrei1_cg/: program.tl
testoid/test_cases/andrei1_new_gen_0/: output  program.tl
testoid/test_cases/andrei2_0/: program.tl
testoid/test_cases/andrei2_cg/: program.tl
testoid/test_cases/andrei2_new_gen_0/: output  program.tl
testoid/test_cases/andrei4_new_gen_0/: output  program.tl
testoid/test_cases/andrei5_new_gen_0/: output  program.tl
testoid/test_cases/andrei6_new_gen_0/: output  program.tl
testoid/test_cases/andrei_gen0_0/: output  program.tl
testoid/test_cases/andrei_gen1_0/: output
testoid/test_cases/andrej1_cg/: program.tl
testoid/test_cases/andrej4_cg/: program.tl
testoid/test_cases/ext_Glitch_001/: description.txt
testoid/test_cases/ext_Glitch_002/: description.txt  program.tl
testoid/test_cases/ext_Glitch_003/: program.tl
testoid/test_cases/ext_Glitch_005/: output  program.tl
testoid/test_cases/krivka_gen4_0/: output  program.tl
testoid/test_cases/krivka_gen5_0/: program.tl
testoid/test_cases/richard16_8/: program.tl
testoid/test_cases/richard17_8/: program.tl
testoid/test_cases/richard19_0/: program.tl
testoid/test_cases/richard20_0/: program.tl
testoid/test_cases/richard21_0/: program.tl
testoid/test_cases/richard23_0/: program.tl
testoid/test_cases/richard24_0/: output  program.tl
testoid/test_cases/richard25_0/: output  program.tl
testoid/test_cases/richard29_0/: program.tl
testoid/test_cases/richard31_0/: program.tl
testoid/test_cases/richard32_0/: program.tl
testoid/test_cases/richard33_0/: program.tl
testoid/test_cases/richard34_0/: program.tl
testoid/test_cases/richard35_0/: program.tl
tests/: bst_test.cpp  deque_test.cpp  dynstring_test.cpp  hashtable_test.cpp  is_it_ok.sh  parser_test.cpp  sample_test.cpp  scanner_test.cpp  stack_test.cpp  symtable_test.cpp
tests/scanner_test_files/: comments.tl  esc_seq.tl  keywords.tl  numbers.tl  operators.tl  program1.tl  program2.tl  program3.tl  strings.tl
tests/test_files/: add.tl  fizzbuzz.tl  hello_world.tl  negate.tl  nil.tl  pad.tl  product_up_to.tl  repeat_until.tl  returns.tl  table_index.tl
(+18 files in other folders)
